<resources>
    <string name="app_name">BookApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Eventos Disponibles</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_events">Eventos a los que asistire</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_event">Deseas asistir al evento?</string>
    <string name="cancel_event_attendance">Deseas cancelar tu asistencia al evento?</string>
    <string name="find_books">Libro</string>
    <string name="description_full_name">%s %s</string>
    <string name="txt_description">Descripcion</string>
    <string name="txt_contact">Contacto</string>
    <string name="txt_address">Direccion</string>

    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_default_message">Default message</string>
    <string name="dialog_permission_button_positive">OK</string>
    <string name="event_saved">Tu evento se guardo correctamente</string>
</resources>