<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mylibrary.bookapp.presentation.ui.view.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_eventDescriptionFragment"
            app:destination="@id/eventDescriptionFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_events"
        android:name="com.mylibrary.bookapp.presentation.ui.view.fragments.MyEventsFragment"
        android:label="@string/menu_my_events"
        tools:layout="@layout/fragment_my_events" >
        <action
            android:id="@+id/action_nav_my_events_to_eventDescriptionFragment"
            app:destination="@id/eventDescriptionFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventDescriptionFragment"
        android:name="com.mylibrary.bookapp.presentation.ui.view.fragments.EventDescriptionFragment"
        android:label="EventDescriptionFragment"
        tools:layout="@layout/fragment_event_description">
        <argument
            android:name="eventId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_find_books"
        android:name="com.mylibrary.bookapp.presentation.ui.view.fragments.FindBooksFragment"
        android:label="@string/find_books"
        tools:layout="@layout/fragment_find_books" />

</navigation>